[package]
name = "factorio-cluster-finder"
version = "0.1.0"
authors = ["oberien <jaro.fietz@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#petgraph = "0.5.0"
petgraph = "0.4.5"
log = "0.3"
env_logger = "0.4"

[build-dependencies]
peg = "0.5.1"
